# spypip

./: .containerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
scripts/: install-github-mcp-server.sh
src/spypip/: __init__.py  __main__.py  analyzer.py  config.py  constants.py  exceptions.py  github_client.py  gitlab_client.py  llm_client.py  models.py  patch_operations.py  utils.py
tests/: __init__.py  test_basic.py  test_config.py  test_llm_patch_regeneration.py  test_max_commits.py  test_patch_removals.py  test_patches.py  test_reasoning_models.py  test_tag_logic.py
